*FindBugs related cleanup, first round. *Deprecate a whole bunch of stuff in org.wikiutils.FileUtils as  replaceable by JDK methods (that take care of charset problems). *Add Locale property to getSiteInfo. *Cache return value of getSiteInfo. *Documentation cleanup.